[FM] Estructura base layout para catalogo Postpago
Cambios:
* Se agregan rutas para las páginas iniciales.
* Se implementa dos páginas iniciales (Home para el catalogo, Product para el detalle de cada producto).
* Se implementa layout base para el catalogo.

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
             "stylePreprocessorOptions": {
               "includePaths": ["src/assets/scss"]
             },
-            "scripts": []
+            "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js"]
           },
           "configurations": {
             "production": {
@@ -98,7 +98,7 @@
             "stylePreprocessorOptions": {
               "includePaths": ["src/assets/scss"]
             },
-            "scripts": []
+            "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js"]
           }
         },
         "lint": {
