--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
             "stylePreprocessorOptions": {
               "includePaths": ["src/assets/scss"]
             },
-            "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js"]
+            "scripts": ["./node_modules/jquery/dist/jquery.min.js", "./node_modules/bootstrap/dist/js/bootstrap.js"]
           },
           "configurations": {
             "production": {
@@ -98,7 +98,7 @@
             "stylePreprocessorOptions": {
               "includePaths": ["src/assets/scss"]
             },
-            "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js"]
+            "scripts": ["./node_modules/jquery/dist/jquery.min.js", "./node_modules/bootstrap/dist/js/bootstrap.js"]
           }
         },
         "lint": {
