--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "singleQuote": true,
   "tabWidth": 2,
   "printWidth": 140,
-  "useTabs": false
+  "useTabs": false,
+  "trailingComma": "es5"
 }
